[package]
name = "dynamodb-mutex-rs"
version = "0.1.0"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "~0.4.19"
rusoto_core = "~0.45.0"
rusoto_dynamodb = "~0.45.0"
thiserror = "~1.0.22"

[dev-dependencies]
tokio = {version="~0.2", features=["macros", "rt-core"]}