[package]
name = "dynamodb-mutex-rs"
version = "0.1.0"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Use Dymanodb mutex library."
repository = "https://github.com/aoyagikouhei/dynamodb-mutex-rs"
keywords = ["dynamodb", "mutex"]
categories = ["asynchronous"]
readme = "Readme.md"
documentation = "https://docs.rs/dynamodb-mutex"

[dependencies]
chrono = "~0.4.19"
rusoto_core = "~0.45.0"
rusoto_dynamodb = "~0.45.0"
thiserror = "~1.0.22"

[dev-dependencies]
futures = "~0.3.8"
tokio = {version="~0.2", features=["macros", "rt-core"]}