[package]
name = "dynamodb-mutex"
version = "0.1.2"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Use Dymanodb mutex library."
repository = "https://github.com/aoyagikouhei/dynamodb-mutex-rs"
keywords = ["dynamodb", "mutex"]
categories = ["asynchronous"]
readme = "README.md"
documentation = "https://docs.rs/dynamodb-mutex"

[dependencies]
chrono = "~0.4.19"
rusoto_core = "~0.46.0"
rusoto_dynamodb = "~0.46.0"
thiserror = "~1.0.24"

[dev-dependencies]
futures = "~0.3.13"
tokio = {version="^1", features=["macros"]}